[gd_scene load_steps=8 format=3 uid="uid://3hacvk0x7d07"]

[ext_resource type="PackedScene" uid="uid://bt1rm762l3yt7" path="res://Scenes/Components/DataBlock.tscn" id="1_fqi2n"]
[ext_resource type="Script" uid="uid://utrqeonndrh4" path="res://Scripts/Components/Sprite/AnimationCollection.gd" id="3_h0fha"]
[ext_resource type="PackedScene" uid="uid://b5mjo87bv1veq" path="res://Scenes/Components/Buttons/FileButton.tscn" id="3_nchm3"]
[ext_resource type="Texture2D" uid="uid://3tukvou8ndyv" path="res://Assets/Buttons/Add.png" id="3_ontlr"]
[ext_resource type="PackedScene" uid="uid://d4jboj6lp36xy" path="res://Scenes/Components/Buttons/CollapseAllButton.tscn" id="4_iy3ym"]
[ext_resource type="Texture2D" uid="uid://bpasawh1chxo8" path="res://Assets/Buttons/Aseprite.png" id="4_senqa"]
[ext_resource type="Texture2D" uid="uid://cd8utxr0le47f" path="res://Assets/Buttons/UncollapseAll.png" id="5_nchm3"]

[node name="AnimationCollection" node_paths=PackedStringArray("animation_container") instance=ExtResource("1_fqi2n")]
script = ExtResource("3_h0fha")
is_override = false
animation_container = NodePath("VBox/Contents/VBox")
data_type = 4
color_1 = Color(1, 0.6156863, 0.7764706, 1)
color_2 = Color(0.96862745, 0.22352941, 0.0627451, 1)
color_3 = Color(0.4862745, 0.11372549, 0.03137255, 1)

[node name="Label" type="Label" parent="VBox/Header" index="0"]
layout_mode = 2
text = "Animations"

[node name="Spacer" type="Control" parent="VBox/Header" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AsepriteButton" parent="VBox/Header" index="2" instance=ExtResource("3_nchm3")]
layout_mode = 2
tooltip_text = "Import Aseprite Data"
texture_normal = ExtResource("4_senqa")
formats = PackedStringArray("json")
aseprite = true

[node name="VBox" type="VBoxContainer" parent="VBox/Contents" index="0"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Header" type="HBoxContainer" parent="VBox/Contents/VBox" index="0"]
layout_mode = 2
alignment = 2

[node name="AddButton" type="TextureButton" parent="VBox/Contents/VBox/Header" index="0"]
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Add Animation"
focus_mode = 0
texture_normal = ExtResource("3_ontlr")

[node name="CollapseAllButton" parent="VBox/Contents/VBox/Header" index="1" node_paths=PackedStringArray("parent") instance=ExtResource("4_iy3ym")]
layout_mode = 2
parent = NodePath("../..")

[node name="UncollapseAllButton" parent="VBox/Contents/VBox/Header" index="2" node_paths=PackedStringArray("parent") instance=ExtResource("4_iy3ym")]
layout_mode = 2
tooltip_text = "Uncollapse All"
texture_normal = ExtResource("5_nchm3")
collapse_all = false
parent = NodePath("../..")

[connection signal="aseprite_imported" from="VBox/Header/AsepriteButton" to="." method="apply_json"]
[connection signal="pressed" from="VBox/Contents/VBox/Header/AddButton" to="." method="add_animation"]
